updated the css

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <div class="logo-container">
       <a href="/">
         <img 
-          src="/src/public/images/ikenga.webp" 
+          src="/images/ikenga.webp" 
           alt="RecipeFinder Logo" 
           class="logo"
           width="150" height="150">
