hero images updated

--- a/index.html
+++ b/index.html
@@ -24,9 +24,46 @@
         <li><a href="./src/pages/index.html">Fun Zone</a></li>
       </ul>
     </nav>
+
+    
+     <!-- Enhanced Hero Section -->
+  <section class="hero-slideshow">
+    <div class="slide active" style="background-image: url('/images/bobotie.jpg')">
+      <div class="slide-content">
+        <h2>Discover Amazing Recipes</h2>
+        <p>Find your next favorite meal with our curated collection</p>
+      </div>
+    </div>
+    <div class="slide" style="background-image: url('/images/ramen.jpg')">
+      <div class="slide-content">
+        <h2>Save Your Favorites</h2>
+        <p>Bookmark recipes to enjoy later</p>
+      </div>
+    </div>
+    <div class="slide" style="background-image: url('/images/paella.jpg')">
+      <div class="slide-content">
+        <h2>Cooking Made Fun</h2>
+        <p>Explore our interactive cooking tools</p>
+      </div>
+    </div>
+    <div class="slide" style="background-image: url('/images/pasta.jpg')">
+      <div class="slide-content">
+        <h2>Join Our Community</h2>
+        <p>Share your culinary creations with others</p>
+      </div>
+    </div>
   </header>
 
   <main>
+
+
+    <div class="dots-container">
+      <div class="dot active" data-slide="0"></div>
+      <div class="dot" data-slide="1"></div>
+      <div class="dot" data-slide="2"></div>
+    </div>
+  </section>
+
     <div class="search-container">
       <div class="search-bar">
         <input type="text" id="Query" class="search-input" placeholder="Search for recipes...">
